deploy/backoffice/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: kubecms
  name: kubecms-backoffice
  labels:
    app: kubecms
    service: kubecms-backoffice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kubecms
      service: kubecms-backoffice
  template:
    metadata:
      labels:
        app: kubecms
        service: kubecms-backoffice
    spec:
      containers:
      - name: kubecms-backoffice
        image: kubecms/kubecms-backoffice:0.1.0-alpha-003
        ports:
        - containerPort: 80
