deploy/backoffice/service.yml
apiVersion: v1
kind: Service
metadata:
  namespace: kubecms
  name: kubecms-backoffice
  labels:
    app: kubecms
    service: kubecms-backoffice
spec:
  selector:
    app: kubecms
    service: kubecms-backoffice
  ports:
    - protocol: TCP
      port: 5000
      targetPort: 80
